tests/baselines/reference/continueTarget5.errors.txt
continueTarget5.ts(3,12): error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.
continueTarget5.ts(5,7): error TS1107: Jump target cannot cross function boundary.


==== continueTarget5.ts (2 errors) ====
    target:
    while (true) {
      function f() {
               ~
!!! error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.
        while (true) {
          continue target;
          ~~~~~~~~~~~~~~~~
!!! error TS1107: Jump target cannot cross function boundary.
        }
      }
    }